--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog with Calendar Navigation</title>
+    <title>NillytoMilly - Posting Every Day Until I Make $1,000,000</title>
     <link rel="stylesheet" href="source/style.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3075080692353785"
      crossorigin="anonymous"></script>
