--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </article>
 
         <!-- Contact Section -->
-        <section id="contact" class="contact-section">
+        <!-- <section id="contact" class="contact-section">
             <h2>Contact Me</h2>
             <form id="contactForm" action="YOUR_FORM_PROCESSING_SCRIPT_URL" method="POST">
                 <div class="form-group">
@@ -65,7 +65,7 @@
                 </div>
                 <button type="submit">Submit</button>
             </form>
-        </section>
+        </section> -->
     </main>
 
     <script src="source/script.js"></script>
