--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
 
         <!-- Contact Link at the Top -->
-        <p><a href="#contact" class="contact-link">Contact Me</a></p>
+        <!-- <p><a href="#contact" class="contact-link">Contact Me</a></p> -->
     </header>
 
     <main>
