--- a/index.html
+++ b/index.html
@@ -53,10 +53,12 @@
             With that said, today’s Song of the Day is <em>A Milli</em> by Lil Wayne. Pretty self-explanatory pick, right? Lil Wayne was the sh*t back in my day.<br>
             <br>
             
-            So here we are, day one. I’m still waiting for Google AdSense to verify my account for the ads. Today’s progress update: $0.00 out of A Milli. (See what I did there?) Cheers!<br>
+            So here we are, day one. I’m still waiting for Google AdSense to verify my account to start running ads. Today’s progress update: $0.00 out of A Milli. (See what I did there?). Anyway, here's an epic video of a guy winning a million bucks on <em>Who Wants to Be a Millionaire</em>. Cheers!<br>
             <br>
             
-            <strong>P.S.</strong> This was a long post. I'll try to keep them more Kevin Hart.</p>
+            <strong>P.S.</strong> This was a long post. I'll try to keep them more Kevin Hart.
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Lb1Gc8jiubc?si=-IxAdoJRNexrCGlq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </p>
         </article>
 
         <!-- Contact Section -->
