--- a/index.html
+++ b/index.html
@@ -57,8 +57,11 @@
             <br>
             
             <strong>P.S.</strong> This was a long post. I'll try to keep them more Kevin Hart.
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Lb1Gc8jiubc?si=-IxAdoJRNexrCGlq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </p>
+
+            <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Lb1Gc8jiubc?si=-IxAdoJRNexrCGlq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
         </article>
 
         <!-- Contact Section -->
