--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
             So here we are, day one. I’m still waiting for Google AdSense to verify my account to start running ads. Today’s progress update: $0.00 out of A Milli. (See what I did there?). Anyway, here's an epic video of a guy winning a million bucks on <em>Who Wants to Be a Millionaire</em>. Cheers!<br>
             <br>
             
-            <strong>P.S.</strong> This was a long post. I'll try to keep them more Kevin Hart.
+            <strong>P.S.</strong> This was a long post. I'll try to keep them more Kevin Hart.<br>
+            <br>
             </p>
 
             <div class="video-container">
