--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
             <br>
             </p>
 
-            <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Lb1Gc8jiubc?si=-IxAdoJRNexrCGlq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </div>
+            <div class="video-wrapper">
+                <div class="video-container">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/Lb1Gc8jiubc?si=-IxAdoJRNexrCGlq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+              </div>
         </article>
 
         <!-- Contact Section -->
