--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <img src="images/tiktok-icon.svg" alt="TikTok Icon" class="tiktok-icon">nillytomilly
         </a>
 
+        <a href="https://www.instagram.com/nilly2milly/" target="_blank" class="instagram-tag"></a>
+            <img src="images/instagram-icon.svg" alt="Instagram Icon" class="instagram-icon">nilly2milly
+        </a>
+
         <div class="date-selector">
             <label for="postDate">Select a Date:</label>
             <input type="date" id="postDate" onchange="scrollToPost()">
