--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img src="images/tiktok-icon.svg" alt="TikTok Icon" class="tiktok-icon">nillytomilly
         </a>
 
-        <a href="https://www.instagram.com/nilly2milly/" target="_blank" class="instagram-tag"></a>
+        <a href="https://www.instagram.com/nilly2milly/" target="_blank" class="instagram-tag">
             <img src="images/instagram-icon.svg" alt="Instagram Icon" class="instagram-icon">nilly2milly
         </a>
 
