--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <main>
         <article id="2024-11-14">
-            <h2>Day 1 / November 14, 2024: Zero test</h2>
+            <h2>Day 1 / November 14, 2024: Zero test 6</h2>
             <p><strong>Hey there! I’m Zero.</strong>Welcome to my first post. Just to clear things up – Zero isn’t my real name. It’s a pseudonym that kinda goes with the website name. Shoutout to all the <em>Holes</em> fans out there (the movie, not holes in the ground or, ahem, other places). Anyway, I’d like to keep my identity on the down-low, but here’s what I will say: I’m in my early 30s, living in the U.S., unemployed, and honestly, just trying to figure out what the hell I’m doing with my life – especially when it comes to making money.<br>
             <br>
 
@@ -64,9 +64,7 @@
             <br>
             </p>
  
-            <div class="video-container"></div> 
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Lb1Gc8jiubc?si=2XSqyhWajt6EK8oN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </div>
+            <iframe src="https://www.youtube.com/embed/Lb1Gc8jiubc?si=2XSqyhWajt6EK8oN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </article>
 
         <!-- Contact Section -->
