--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <main>
         <article id="2024-11-14">
-            <h2>Day 1 / November 14, 2024: Zero 2</h2>
+            <h2>Day 1 / November 14, 2024: Zero</h2>
             <p><strong>Hey there! I’m Zero.</strong>Welcome to my first post. Just to clear things up – Zero isn’t my real name. It’s a pseudonym that kinda goes with the website name. Shoutout to all the <em>Holes</em> fans out there (the movie, not holes in the ground or, ahem, other places). Anyway, I’d like to keep my identity on the down-low, but here’s what I will say: I’m in my early 30s, living in the U.S., unemployed, and honestly, just trying to figure out what the hell I’m doing with my life – especially when it comes to making money.<br>
             <br>
 
@@ -60,7 +60,7 @@
             So here we are, day one. I’m still waiting for Google AdSense to verify my account to start running ads. Today’s progress update: $0.00 out of A Milli. (See what I did there?). Anyway, here's an old video of a guy winning a million bucks on <em>Who Wants to Be a Millionaire</em>. Cheers!<br>
             <br>
             
-            <strong>P.S.</strong> This was a long post. I'll try to keep them more Kevin Hart. 2<br>
+            <strong>P.S.</strong> This was a long post. I'll try to keep them more Kevin Hart. 5<br>
             <br>
             </p>
  
